--- a/HashTable/187.repeated-dna-sequences.md
+++ b/HashTable/187.repeated-dna-sequences.md
@@ -1,5 +1,5 @@
 # 重复的DNA序列（Repeated DNA Sequences）*Medium*
-### [重复的DNA序列](https://leetcode-cn.com/problems/repeated-dna-sequences)（[Origin](https://leetcode.com/problems/repeated-dna-sequences)）
+### [原题链接](https://leetcode-cn.com/problems/repeated-dna-sequences)（[Origin](https://leetcode.com/problems/repeated-dna-sequences)）
 ## 描述
 所有 DNA 由一系列缩写为 A，C，G 和 T 的核苷酸组成，例如：&ldquo;ACGAATTCCG&rdquo;。在研究 DNA 时，识别 DNA 中的重复序列有时会对研究非常有帮助。
 
