--- a/HashTable/128.longest-consecutive-sequence.md
+++ b/HashTable/128.longest-consecutive-sequence.md
@@ -34,24 +34,22 @@ Explanation: The longest consecutive elements sequence is [1, 2, 3, 4]. Therefor
 class Solution {
 public:
     int longestConsecutive(vector<int>& nums) {
-        unordered_map<int, int> nearestSeqLen;
-        int longest = 0;
+        unordered_map<int,int> hash;
+        int maxlen = 0;
         
         for (int i = 0; i < nums.size(); i++) {
-            if (nearestSeqLen.find(nums[i]) == nearestSeqLen.end()) {
-                int left = nearestSeqLen.find(nums[i] - 1) != nearestSeqLen.end() ?
-                    nearestSeqLen[nums[i] - 1] : 0;
-                int right = nearestSeqLen.find(nums[i] + 1) != nearestSeqLen.end() ?
-                    nearestSeqLen[nums[i] + 1] : 0;
+            if (!hash.count(nums[i])) {
+                int left = hash.count(nums[i]-1) ? hash[nums[i]-1] : 0;
+                int right = hash.count(nums[i]+1) ? hash[nums[i]+1] : 0;
+                
                 int sum = left + right + 1;
-                longest = max(longest, sum);
-                nearestSeqLen[nums[i]] = sum;
-                nearestSeqLen[nums[i] - left] = sum;
-                nearestSeqLen[nums[i] + right] = sum;
+                maxlen = max(maxlen, sum);
+                
+                hash[nums[i]] = hash[nums[i] - left] = hash[nums[i] + right] = sum;
             }
         }
         
-        return longest;
+        return maxlen;
     }
 };
 ```
