--- a/HashTable/187.repeated-dna-sequences.md
+++ b/HashTable/187.repeated-dna-sequences.md
@@ -33,22 +33,13 @@ hash
 class Solution {
 public:
     vector<string> findRepeatedDnaSequences(string s) {
-        unordered_map<string, int> seqCnt;
         vector<string> res;
-        int n = s.length();
-        if (n < 10) {
-            return res;
-        }
+        unordered_map<string, int> freq;
         
-        for (int i = 0; i <= n-10; i++) {
-            string dna = s.substr(i, 10);
-            seqCnt[dna]++;
-        }
-        
-        for (auto it : seqCnt) {
-            if (it.second > 1) {
-                res.push_back(it.first);
-            }
+        for (int i = 0; i <= int(s.length()) - 10; i++) {
+            string subs = s.substr(i, 10);
+            if (freq[subs] == 1) res.push_back(subs);
+            freq[subs]++;
         }
         
         return res;
